# poet

./: README.md  pyproject.toml
poet/: main.py  utils.py
poet/commands/: init.py
poet/utils/: author.py  dependencies.py  license.py  pyproject.py  python_version.py  scraper.py  simple_text_and_select.py
